--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <nav>
         <a href="./index.html">watchcharm</a>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Catalog</a></li>
-          <li><a href="">Sale</a></li>
-          <li><a href="">Reviews</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#catalog">Catalog</a></li>
+          <li><a href="#sale">Sale</a></li>
+          <li><a href="#reviews">Reviews</a></li>
+          <li><a href="#contact-us">Contact Us</a></li>
         </ul>
       </nav>
       <!-- address>ul>li*3>a -->
@@ -34,7 +34,188 @@
         </ul>
       </address>
     </header>
-    <main></main>
+    <main>
+      <!-- section>h1+p+(ul>li*3>img)+a+img -->
+      <section id="hero">
+        <h1>Welcome to our <span>collection</span> of premium watches</h1>
+        <p>
+          Our watches are not just timepieces, but also an expression of your
+          personality and lifestyle. From classic designs to modern ones, we
+          have a watch to suit every taste and occasion.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/hero-girl-one.png" alt="hero-girl" width="60" />
+          </li>
+          <li><img src="./images/hero-boy.png" alt="hero-boy" width="60" /></li>
+          <li>
+            <img src="./images/hero-girl-two.png" alt="girl" width="60" />
+          </li>
+        </ul>
+        <a href="">Scroll down</a
+        ><img src="./images/hero-clock.png" alt="clock" width="1150" />
+      </section>
+
+      <!-- section>h2+p+p+a+img -->
+      <section id="about-us">
+        <h2>About Us</h2>
+        <p>
+          Welcome to our premium watch collection, where luxury and style meet
+          functionality and precision. Our selection of timepieces embodies the
+          very best in Swiss craftsmanship and engineering, ensuring that you'll
+          always have a reliable and stylish accessory on your wrist.
+        </p>
+        <p>
+          At our premium watch collection, we believe that a watch is more than
+          just a timekeeping device - it's a statement piece that reflects your
+          personality and style. So why settle for anything less than the best?
+        </p>
+        <a href="#catalog">View catalog</a
+        ><img src="./images/about-us-clock.png" alt="clock" />
+      </section>
+      <section id="catalog">
+        <!-- h2+ul>li*6>img+h3+p -->
+        <h2>Catalog</h2>
+        <ul>
+          <li>
+            <img src="./images/catalog-one.png" alt="clock" />
+            <h3>Garmin Fenix 7X Pro Sapphire Solar</h3>
+            <p>€500</p>
+          </li>
+          <li>
+            <img src="./images/catalog-two.png" alt="clock" />
+            <h3>Garmin Marq Athlete</h3>
+            <p>€450</p>
+          </li>
+          <li>
+            <img src="./images/catalog-three.png" alt="clock" />
+            <h3>Garmin Descent MK1</h3>
+            <p>€680</p>
+          </li>
+          <li>
+            <img src="./images/catalog-four.png" alt="clock" />
+            <h3>Garmin D2 Delta PX</h3>
+            <p>€380</p>
+          </li>
+          <li>
+            <img src="./images/catalog-five.png" alt="clock" />
+            <h3>Garmin Fenix 6 Pro Solar</h3>
+            <p>€400</p>
+          </li>
+          <li>
+            <img src="./images/catalog-six.png" alt="clock" />
+            <h3>Tube Watch S42 Date Steel With Black Case</h3>
+            <p>€395</p>
+          </li>
+        </ul>
+      </section>
+      <!-- section>h2+p+a -->
+      <section id="advertisement">
+        <h2 hidden>Advertisement</h2>
+        <p>
+          Choose your story, making every moment unique. Time is your style, and
+          we reveal it.
+        </p>
+        <a href="#contact-us">Contact Us</a>
+      </section>
+      <!-- section>h2+(ul>li*4>img)+img+div>h3+p*4+ul>li*6>p -->
+
+      <section id="sale">
+        <h2>Sale</h2>
+        <ul>
+          <li>
+            <img src="./images/sale-one.png" alt="sale-clock" width="96" />
+          </li>
+          <li>
+            <img src="./images/sale-two.png" alt="sale-clock" width="96" />
+          </li>
+          <li>
+            <img src="./images/sale-three.png" alt="sale-clock" width="96" />
+          </li>
+          <li>
+            <img src="./images/sale-four.png" alt="sale-clock" width="96" />
+          </li>
+        </ul>
+        <img src="./images/sale-clock.png" alt="sale-big-clock" />
+        <div>
+          <h3>MARQ® Commander (Gen 2) - Carbon Edition</h3>
+          <p>Product tag: 706587</p>
+          <p>€1500</p>
+          <p>€3000</p>
+          <p>
+            The Garmin MARQ Commander Gen 2 Carbon Edition is a modern
+            smartwatch for adventurers that takes materials and features to the
+            next level. The body of the watch is made of very durable Fused
+            Carbon Fiber material and has a precise AMOLED touch screen. The
+            sensitive touch screen is complemented by buttons that can be used
+            in any conditions.
+          </p>
+          <ul>
+            <li>
+              <p>Fused carbon fiber</p>
+            </li>
+            <li>
+              <p>Grade-5 Titanuim</p>
+            </li>
+            <li>
+              <p>Athlete</p>
+            </li>
+            <li>
+              <p>Golfer</p>
+            </li>
+            <li>
+              <p>Commander</p>
+            </li>
+            <li>
+              <p>Adventurer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="reviews">
+        <!-- h2+ul>li*3>img+h3+p -->
+        <h2>Reviews</h2>
+        <ul>
+          <li>
+            <img src="./images/hero-boy.png" alt="reviews-boy" width="56" />
+            <h3>John Wax</h3>
+            <p>
+              Buying a watch from was the best choice for me. The design is
+              perfectly combined with high quality materials. The strap fits
+              nicely on the hand, and the mechanism works flawlessly.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/hero-girl-one.png"
+              alt="reviews-girl"
+              width="56" />
+            <h3>Victoria Romashenko</h3>
+            <p>
+              Can't take my eyes off my watch from. Every time I put it on, it
+              is admired by those around me. The build quality and attention to
+              detail make it a real gem among my accessories.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/hero-girl-two.png"
+              alt="reviews-girl"
+              width="56" />
+            <h3>Anastasia Trachuk</h3>
+            <p>
+              My watch from is a real masterpiece. Every detail impresses with
+              the high quality of execution. Special features like [specify
+              features] make it an indispensable companion in my daily life.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section id="contact-us">
+      <h2></h2>
+      <img src="" alt="">
+    </section>
+    </main>
     <footer></footer>
   </body>
 </html>
