--- a/index.html
+++ b/index.html
@@ -4,56 +4,111 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WatchCharm</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./Gilroy/stylesheet.css" />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <!-- nav>a+ul>li*6>a -->
-      <nav>
-        <a href="./index.html">watchcharm</a>
-        <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about-us">About Us</a></li>
-          <li><a href="#catalog">Catalog</a></li>
-          <li><a href="#sale">Sale</a></li>
-          <li><a href="#reviews">Reviews</a></li>
-          <li><a href="#contact-us">Contact Us</a></li>
-        </ul>
-      </nav>
-      <!-- address>ul>li*3>a -->
-      <address>
-        <ul>
-          <li>
-            <a href="https://www.facebook.com/" target="_blank">facebook </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank"> instagram </a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/" target="_blank">youtube </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="header-navigation">
+          <a href="./index.html" class="header-logo">watchcharm</a>
+          <ul class="header-nav-list">
+            <li class="header-list-item">
+              <a href="#hero" class="header-list-link">Home</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#about-us" class="header-list-link">About Us</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#catalog" class="header-list-link">Catalog</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#sale" class="header-list-link">Sale</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#reviews" class="header-list-link">Reviews</a>
+            </li>
+            <li class="header-list-item">
+              <a href="#contact-us" class="header-list-link">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- address>ul>li*3>a -->
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="address-list-item">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="address-link"
+                >f
+              </a>
+            </li>
+            <li class="address-list-item">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="address-link">
+                i
+              </a>
+            </li>
+            <li class="address-list-item">
+              <a
+                href="https://www.youtube.com/"
+                target="_blank"
+                class="address-link"
+                >y
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- section>h1+p+(ul>li*3>img)+a+img -->
-      <section id="hero">
-        <h1>Welcome to our <span>collection</span> of premium watches</h1>
-        <p>
-          Our watches are not just timepieces, but also an expression of your
-          personality and lifestyle. From classic designs to modern ones, we
-          have a watch to suit every taste and occasion.
-        </p>
-        <ul>
-          <li>
-            <img src="./images/hero-girl-one.png" alt="hero-girl" width="60" />
-          </li>
-          <li><img src="./images/hero-boy.png" alt="hero-boy" width="60" /></li>
-          <li>
-            <img src="./images/hero-girl-two.png" alt="girl" width="60" />
-          </li>
-        </ul>
-        <a href="">Scroll down</a
-        ><img src="./images/hero-clock.png" alt="clock" width="1150" />
+      <section id="hero" class="hero">
+        <div class="container">
+          <div class="wrap">
+            <div class="hero-text">
+              <h1 class="hero-title">
+                Welcome to our
+                <span class="hero-title-collection">collection</span> of premium
+                watches
+              </h1>
+              <p class="hero-descr">
+                Our watches are not just timepieces, but also an expression of
+                your personality and lifestyle. From classic designs to modern
+                ones, we have a watch to suit every taste and occasion.
+              </p>
+            </div>
+            <div class="hero-testimonials">
+              <ul class="hero-list">
+                <li class="hero-list-item">
+                  <img
+                    src="./images/hero-girl-one.png"
+                    alt="hero-girl"
+                    width="60" />
+                </li>
+                <li class="hero-list-item">
+                  <img src="./images/hero-boy.png" alt="hero-boy" width="60" />
+                </li>
+                <li class="hero-list-item">
+                  <img src="./images/hero-girl-two.png" alt="girl" width="60" />
+                </li>
+              </ul>
+              <a href="#footer" class="hero-link">Scroll down</a>
+            </div>
+          </div>
+          <img src="./images/hero-clock.png" alt="clock" width="1150" />
+        </div>
       </section>
 
       <!-- section>h2+p+p+a+img -->
@@ -212,10 +267,10 @@
         </ul>
       </section>
       <section id="contact-us">
-      <h2></h2>
-      <img src="" alt="">
-    </section>
+        <h2></h2>
+        <img src="" alt="" />
+      </section>
     </main>
-    <footer></footer>
+    <footer id="footer"></footer>
   </body>
 </html>
