--- a/index.html
+++ b/index.html
@@ -112,57 +112,67 @@
       </section>
 
       <!-- section>h2+p+p+a+img -->
-      <section id="about-us">
-        <h2>About Us</h2>
-        <p>
-          Welcome to our premium watch collection, where luxury and style meet
-          functionality and precision. Our selection of timepieces embodies the
-          very best in Swiss craftsmanship and engineering, ensuring that you'll
-          always have a reliable and stylish accessory on your wrist.
-        </p>
-        <p>
-          At our premium watch collection, we believe that a watch is more than
-          just a timekeeping device - it's a statement piece that reflects your
-          personality and style. So why settle for anything less than the best?
-        </p>
-        <a href="#catalog">View catalog</a
-        ><img src="./images/about-us-clock.png" alt="clock" />
+      <section id="about-us" class="about-us">
+        <div class="container">
+          <div class="view-catalog-wrap">
+            <h2 class="about-us-title">About Us</h2>
+            <p class="about-us-title-descr">
+              Welcome to our premium watch collection, where luxury and style
+              meet functionality and precision. Our selection of timepieces
+              embodies the very best in Swiss craftsmanship and engineering,
+              ensuring that you'll always have a reliable and stylish accessory
+              on your wrist.
+            </p>
+            <p class="about-us-subtitle">
+              At our premium watch collection, we believe that a watch is more
+              than just a timekeeping device - it's a statement piece that
+              reflects your personality and style. So why settle for anything
+              less than the best?
+            </p>
+            <a href="#catalog" class="about-us-link">View catalog</a>
+          </div>
+          <img src="./images/about-us-clock.png" alt="clock" />
+        </div>
       </section>
-      <section id="catalog">
+      <section id="catalog" class="catalog">
         <!-- h2+ul>li*6>img+h3+p -->
-        <h2>Catalog</h2>
-        <ul>
-          <li>
-            <img src="./images/catalog-one.png" alt="clock" />
-            <h3>Garmin Fenix 7X Pro Sapphire Solar</h3>
-            <p>€500</p>
-          </li>
-          <li>
-            <img src="./images/catalog-two.png" alt="clock" />
-            <h3>Garmin Marq Athlete</h3>
-            <p>€450</p>
-          </li>
-          <li>
-            <img src="./images/catalog-three.png" alt="clock" />
-            <h3>Garmin Descent MK1</h3>
-            <p>€680</p>
-          </li>
-          <li>
-            <img src="./images/catalog-four.png" alt="clock" />
-            <h3>Garmin D2 Delta PX</h3>
-            <p>€380</p>
-          </li>
-          <li>
-            <img src="./images/catalog-five.png" alt="clock" />
-            <h3>Garmin Fenix 6 Pro Solar</h3>
-            <p>€400</p>
-          </li>
-          <li>
-            <img src="./images/catalog-six.png" alt="clock" />
-            <h3>Tube Watch S42 Date Steel With Black Case</h3>
-            <p>€395</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="catalog-title">Catalog</h2>
+          <ul class="catalog-list">
+            <li class="catalog-item">
+              <img src="./images/catalog-one.png" alt="clock" />
+              <h3 class="catalog-subtitle">Garmin Fenix 7X Pro Sapphire Solar</h3>
+              <p class="catalog-item-price">€500</p>
+            </li>
+            <li class="catalog-item">
+              <img src="./images/catalog-two.png" alt="clock" />
+              <h3 class="catalog-subtitle">Garmin Marq Athlete</h3>
+              <p class="catalog-item-price">€450</p>
+            </li>
+            <li class="catalog-item">
+              <img src="./images/catalog-three.png" alt="clock" />
+              <h3 class="catalog-subtitle">Garmin Descent MK1</h3>
+              <p class="catalog-item-price">€680</p>
+            </li>
+            <li class="catalog-item">
+              <img src="./images/catalog-four.png" alt="clock" />
+              <h3>Garmin D2 Delta PX</h3>
+              <p class="catalog-item-price">€380</p>
+            </li>
+            <li class="catalog-item">
+              <img src="./images/catalog-five.png" alt="clock" />
+              <h3>Garmin Fenix 6 Pro Solar</h3>
+              <p class="catalog-item-price">€400</p>
+            </li>
+            <li class="catalog-item">
+              <img src="./images/catalog-six.png" alt="clock" />
+              <h3 class="catalog-subtitle">
+                Tube Watch S42 Date Steel With Black Case
+              </h3>
+              <p class="catalog-item-price">€395</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section>h2+p+a -->
       <section id="advertisement">
