--- a/index.html
+++ b/index.html
@@ -175,13 +175,16 @@
         </div>
       </section>
       <!-- section>h2+p+a -->
-      <section id="advertisement">
-        <h2 hidden>Advertisement</h2>
-        <p>
-          Choose your story, making every moment unique. Time is your style, and
-          we reveal it.
-        </p>
-        <a href="#contact-us">Contact Us</a>
+      <section id="advertisement"  class="advertisement">
+        <div class="container">
+          
+          <h2 hidden>Advertisement</h2>
+          <p class="advertisement-text">
+            Choose <span class="story">your story</span>, making every moment unique. Time is your style, and
+            we reveal it.
+          </p>
+          <a href="#contact-us" class="advertisement-link">Contact Us</a>
+        </div>
       </section>
       <!-- section>h2+(ul>li*4>img)+img+div>h3+p*4+ul>li*6>p -->
 
