--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </ul>
       </section>
       <section id="contact-us">
-        <h2></h2>
+        <h2>Contact Us</h2>
         <img src="" alt="" />
       </section>
     </main>
