--- a/index.html
+++ b/index.html
@@ -281,6 +281,13 @@
       </section>
       <section id="contact-us">
         <h2>Contact Us</h2>
+        <form action="">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <button type="submit">send</button>
+        </form>
         <img src="" alt="" />
       </section>
     </main>
