--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
       <section id="contact-us">
         <h2>Contact Us</h2>
         <form action="">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div><label for=""><input type="text"></label></div>
+          <div><label><input type="text"></label></div>
+          <div><label><input type="text"></label></div>
+          <div><label><textarea name=""></textarea></label></div>
           <button type="submit">send</button>
         </form>
         <img src="" alt="" />
