--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -49,7 +49,9 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 class="address-link"
-                >f
+                ><svg width="24" height="24" viewBox="0 0 24 24">
+                  <use href="./images/icons.svg#icon-facebook" />
+                </svg>
               </a>
             </li>
             <li class="address-list-item">
@@ -57,7 +59,9 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 class="address-link">
-                i
+                <svg width="24" height="24" viewBox="0 0 24 24">
+                  <use href="./images/icons.svg#icon-instagram" />
+                </svg>
               </a>
             </li>
             <li class="address-list-item">
@@ -65,7 +69,9 @@
                 href="https://www.youtube.com/"
                 target="_blank"
                 class="address-link"
-                >y
+                ><svg width="24" height="24" viewBox="0 0 24 24">
+                  <use href="./images/icons.svg#icon-youtube" />
+                </svg>
               </a>
             </li>
           </ul>
@@ -141,7 +147,9 @@
           <ul class="catalog-list">
             <li class="catalog-item">
               <img src="./images/catalog-one.png" alt="clock" />
-              <h3 class="catalog-subtitle">Garmin Fenix 7X Pro Sapphire Solar</h3>
+              <h3 class="catalog-subtitle">
+                Garmin Fenix 7X Pro Sapphire Solar
+              </h3>
               <p class="catalog-item-price">€500</p>
             </li>
             <li class="catalog-item">
@@ -175,13 +183,12 @@
         </div>
       </section>
       <!-- section>h2+p+a -->
-      <section id="advertisement"  class="advertisement">
+      <section id="advertisement" class="advertisement">
         <div class="container">
-          
           <h2 hidden>Advertisement</h2>
           <p class="advertisement-text">
-            Choose <span class="story">your story</span>, making every moment unique. Time is your style, and
-            we reveal it.
+            Choose <span class="story">your story</span>, making every moment
+            unique. Time is your style, and we reveal it.
           </p>
           <a href="#contact-us" class="advertisement-link">Contact Us</a>
         </div>
@@ -282,15 +289,51 @@
       <section id="contact-us">
         <h2>Contact Us</h2>
         <form action="">
-          <div><label for=""><input type="text"></label></div>
-          <div><label><input type="text"></label></div>
-          <div><label><input type="text"></label></div>
-          <div><label><textarea name=""></textarea></label></div>
+          <div>
+            <label for=""><input type="text" /></label>
+          </div>
+          <div>
+            <label><input type="text" /></label>
+          </div>
+          <div>
+            <label><input type="text" /></label>
+          </div>
+          <div>
+            <label><textarea name=""></textarea></label>
+          </div>
           <button type="submit">send</button>
         </form>
         <img src="" alt="" />
       </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <ul>
+        <li>
+          <a href="">
+            <svg width="24" height="24" viewBox="0 0 24 24">
+              <use href="./images/icons.svg#" />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg width="24" height="24" viewBox="0 0 24 24">
+              <use href="./images/icons.svg#" />
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <svg width="24" height="24" viewBox="0 0 24 24">
+              <use href="./images/icons.svg#" />
+            </svg>
+          </a>
+        </li>
+      </ul>
+      <p>
+        Have the time of your life with our watches: where high-class
+        craftsmanship meets impeccable design
+      </p>
+    </footer>
   </body>
 </html>
